--- a/flex_columns/index.html
+++ b/flex_columns/index.html
@@ -16,16 +16,17 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
-    <header><!-- h2 webpage title--></header>
+    <header><!-- h1 webpage title--></header>
     <main>
       <section class="cars">
+        <!-- h3 section title -->
         <article class="cars__car">
           <img
             src="./assets/images/icon-sedans.svg"
             alt="Sedan icon"
             class="cars__car-icon"
           />
-          <h2 class="cars__car-title">Sedans</h2>
+          <h3 class="cars__car-title">Sedans</h3>
           <div class="cars__car-text">
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
@@ -38,7 +39,7 @@
             alt="Suv icon"
             class="cars__car-icon"
           />
-          <h2 class="cars__car-title">SUVs</h2>
+          <h3 class="cars__car-title">SUVs</h3>
           <div class="cars__car-text">
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
@@ -51,7 +52,7 @@
             alt="Luxury icon"
             class="cars__car-icon"
           />
-          <h2 class="cars__car-title">Luxury</h2>
+          <h3 class="cars__car-title">Luxury</h3>
           <div class="cars__car-text">
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
