Fix some accessibity issues

--- a/landing_page_huddle/index.html
+++ b/landing_page_huddle/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
-    <section class="hero">
+    <section class="hero" role="main">
       <div class="hero__container">
         <img class="hero__logo" src="./assets/images/logo.svg" alt="" />
         <div class="hero__main">
@@ -50,17 +50,26 @@
         <footer class="hero__footer">
           <ul class="social">
             <li>
-              <a class="social__link" href="https://facebook.com"
+              <a
+                class="social__link"
+                href="https://facebook.com"
+                aria-label="link to Facebook"
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
             </li>
             <li>
-              <a class="social__link" href="https://twitter.com"
+              <a
+                class="social__link"
+                href="https://twitter.com"
+                aria-label="link to Twitter"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
             </li>
             <li>
-              <a class="social__link" href="https://instagram.com/"
+              <a
+                class="social__link"
+                href="https://instagram.com/"
+                aria-label="link to Instagram"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </li>
