Added Frontend Solution URL

--- a/card_product_preview/index.html
+++ b/card_product_preview/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body class="cover-l">
-    <div class="center-l">
+    <div class="center-l" role="main">
       <article class="card switcher-l">
         <div class="card__body">
           <div class="center-l">
