fix accessibility issues

--- a/card_qr_code/index.html
+++ b/card_qr_code/index.html
@@ -21,26 +21,28 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
   <body>
-    <div class="cover-l">
-      <div class="center-l">
-        <div class="box-l card">
-          <div class="frame-l card__media">
-            <img
-              src="./assets/images/image-qr-code.png"
-              alt="Qr code to visit Frontend Mentor"
-            />
-          </div>
-          <div class="stack-l">
-            <div class="card__title">
-              Improve your front-end skills by building projects
+    <main>
+      <div class="cover-l">
+        <div class="center-l">
+          <div class="box-l card">
+            <div class="frame-l card__media">
+              <img
+                src="./assets/images/image-qr-code.png"
+                alt="Qr code to visit Frontend Mentor"
+              />
             </div>
-            <p class="card__text">
-              Scan the QR code to visit Frontend Mentor and take your coding
-              skills to the next level
-            </p>
+            <div class="stack-l">
+              <h1 class="card__title">
+                Improve your front-end skills by building projects
+              </h1>
+              <p class="card__text">
+                Scan the QR code to visit Frontend Mentor and take your coding
+                skills to the next level
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
