Added card_stats project

--- a/card_qr_code/index.html
+++ b/card_qr_code/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <meta
+      name="description"
+      content="Frontend Mentor project to practice card layout with an image and without any change between devices."
+    />
     <link
       rel="icon"
       type="image/png"
@@ -27,8 +29,10 @@
           <div class="box-l card">
             <div class="frame-l card__media">
               <img
-                src="./assets/images/image-qr-code.png"
                 alt="Qr code to visit Frontend Mentor"
+                height="290"
+                src="./assets/images/image-qr-code.png"
+                width="290"
               />
             </div>
             <div class="stack-l">
