Added URL solution

--- a/card_nft_preview/index.html
+++ b/card_nft_preview/index.html
@@ -28,7 +28,11 @@
       <main>
         <article class="box-l card">
           <div class="frame-l card__media">
-            <a class="card__media-icon" href="#card-link">
+            <a
+              class="card__media-icon"
+              href="#card-link"
+              aria-label="link to the product page"
+            >
               <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
                 <g fill="none" fill-rule="evenodd">
                   <path d="M0 0h48v48H0z" />
