added url solucion

--- a/card_nft_preview/index.html
+++ b/card_nft_preview/index.html
@@ -30,7 +30,7 @@
           <div class="frame-l card__media">
             <a
               class="card__media-icon"
-              href="#card-link"
+              href="./"
               aria-label="link to the product page"
             >
               <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
