first commit section__social project

--- a/card_nft_preview/index.html
+++ b/card_nft_preview/index.html
@@ -73,14 +73,16 @@
                     fill="#8BACD9"
                   />
                 </svg>
-                <span>&nbsp;3 days left </span>
+                <span>3 days left </span>
               </div>
             </div>
             <div class="card__footer">
               <div class="frame-l card__avatar">
                 <img
-                  src="./assets/images/image-avatar.png"
                   alt="Avatar image of the creator."
+                  height="32"
+                  src="./assets/images/image-avatar.png"
+                  width="32"
                 />
               </div>
               <small>
