--- a/card_four_feature/index.html
+++ b/card_four_feature/index.html
@@ -46,7 +46,7 @@
                   <div class="frame-l card__media">
                     <svg
                       alt="magnifying glass icon"
-                      height="auto"
+                      height="57"
                       viewBox="0 0 64 64"
                       width="57"
                       xmlns="http://www.w3.org/2000/svg"
@@ -118,7 +118,7 @@
                   <div class="frame-l card__media">
                     <svg
                       alt="icon of a house next to a web page that occupies the entire background."
-                      height="auto"
+                      height="57"
                       viewBox="0 0 64 64"
                       width="57"
                       xmlns="http://www.w3.org/2000/svg"
@@ -182,7 +182,7 @@
                   <div class="frame-l card__media">
                     <svg
                       alt="light bulb icon."
-                      height="auto"
+                      height="57"
                       width="57"
                       viewBox="0 0 64 64"
                       xmlns="http://www.w3.org/2000/svg"
@@ -271,7 +271,7 @@
                   <div class="frame-l card__media">
                     <svg
                       alt="computer monitor icon."
-                      height="auto"
+                      height="57"
                       width="57"
                       viewBox="0 0 64 64"
                       xmlns="http://www.w3.org/2000/svg"
