fixed semantic tag

--- a/landing_page_elearning/index.html
+++ b/landing_page_elearning/index.html
@@ -41,51 +41,51 @@
             </div>
           </div>
         </header>
-        <section class="section-hero">
-          <div class="switcher-l">
-            <header class="section__header">
-              <h1 class="section__title">Maximize skill, minimize budget</h1>
-              <p class="section__subtitle">
-                Our modern courses across a range of in-demand skills will give
-                you the knowledge you need to live the life you want.
-              </p>
-              <button class="btn btn-cta--accent">Get Started</button>
-            </header>
-            <picture class="frame-l section__media">
-              <source
-                media="(max-width: 375px)"
-                srcset="
-                  ./assets/images/image-hero-mobile.webp    1x,
-                  ./assets/images/image-hero-mobile@2x.webp 2x
-                "
-                type="image/webp"
-              />
-              <source
-                media="(min-width: 1110px)"
-                srcset="
-                  ./assets/images/image-hero-desktop.webp    1x,
-                  ./assets/images/image-hero-desktop@2x.webp 2x
-                "
-                type="image/webp"
-              />
-              <source
-                media="(min-width: 768px)"
-                srcset="
-                  ./assets/images/image-hero-tablet.webp    1x,
-                  ./assets/images/image-hero-tablet@2x.webp 2x
-                "
-                type="image/webp"
-              />
-              <img
-                width="343"
-                height="374"
-                alt="Image of a woman drinking from a cup of coffee or tea."
-                src="./assets/images/image-hero-mobile.png"
-              />
-            </picture>
-          </div>
-        </section>
         <main>
+          <section class="section-hero">
+            <div class="switcher-l">
+              <header class="section__header">
+                <h1 class="section__title">Maximize skill, minimize budget</h1>
+                <p class="section__subtitle">
+                  Our modern courses across a range of in-demand skills will
+                  give you the knowledge you need to live the life you want.
+                </p>
+                <button class="btn btn-cta--accent">Get Started</button>
+              </header>
+              <picture class="frame-l section__media">
+                <source
+                  media="(max-width: 375px)"
+                  srcset="
+                    ./assets/images/image-hero-mobile.webp    1x,
+                    ./assets/images/image-hero-mobile@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1110px)"
+                  srcset="
+                    ./assets/images/image-hero-desktop.webp    1x,
+                    ./assets/images/image-hero-desktop@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./assets/images/image-hero-tablet.webp    1x,
+                    ./assets/images/image-hero-tablet@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  width="343"
+                  height="374"
+                  alt="Image of a woman drinking from a cup of coffee or tea."
+                  src="./assets/images/image-hero-mobile.png"
+                />
+              </picture>
+            </div>
+          </section>
           <section class="section-items">
             <ul class="card-list">
               <li>
